@@ -61,6 +61,7 @@ namespace Mono.Addins.Description
 		bool hasUserId;
 		bool canWrite = true;
 		bool defaultEnabled = true;
+		AddinFlags flags = AddinFlags.None;
 		string domain;
 		
 		ModuleDescription mainModule;
@@ -179,9 +180,26 @@ namespace Mono.Addins.Description
 			set { defaultEnabled = value; }
 		}
 		
+		public AddinFlags Flags {
+			get { return flags; }
+			set { flags = value; }
+		}
+		
 		internal bool HasUserId {
 			get { return hasUserId; }
 			set { hasUserId = value; }
+		}
+		
+		public bool CanDisable {
+			get { return (flags & AddinFlags.CantDisable) == 0 && !IsHidden; }
+		}
+		
+		public bool CanUninstall {
+			get { return (flags & AddinFlags.CantUninstall) == 0 && !IsHidden; }
+		}
+		
+		public bool IsHidden {
+			get { return (flags & AddinFlags.Hidden) != 0; }
 		}
 		
 		internal bool SupportsVersion (string ver)
@@ -448,7 +466,12 @@ namespace Mono.Addins.Description
 				elem.RemoveAttribute ("defaultEnabled");
 			else
 				elem.SetAttribute ("defaultEnabled", "false");
-				
+			
+			if (flags != AddinFlags.None)
+				elem.RemoveAttribute ("flags");
+			else
+				elem.SetAttribute ("flags", flags.ToString ());
+			
 			if (author != null && author.Length > 0)
 				elem.SetAttribute ("author", author);
 			else
@@ -536,10 +559,15 @@ namespace Mono.Addins.Description
 			
 			string s = elem.GetAttribute ("isRoot");
 			if (s.Length == 0) s = elem.GetAttribute ("isroot");
-			config.isroot = s == "true" || s == "yes";
+			config.isroot = GetBool (s, false);
 			
-			s = elem.GetAttribute ("defaultEnabled");
-			config.defaultEnabled = s.Length == 0 || s == "true" || s == "yes";
+			config.defaultEnabled = GetBool (elem.GetAttribute ("defaultEnabled"), true);
+			
+			string prot = elem.GetAttribute ("flags");
+			if (prot.Length == 0)
+				config.flags = AddinFlags.None;
+			else
+				config.flags = (AddinFlags) Enum.Parse (typeof(AddinFlags), prot);
 			
 			XmlElement localizerElem = (XmlElement) elem.SelectSingleNode ("Localizer");
 			if (localizerElem != null)
@@ -549,6 +577,14 @@ namespace Mono.Addins.Description
 				config.hasUserId = true;
 			
 			return config;
+		}
+		
+		static bool GetBool (string s, bool defval)
+		{
+			if (s.Length == 0)
+				return defval;
+			else
+				return s == "true" || s == "yes";
 		}
 		
 		internal static AddinDescription ReadBinary (FileDatabase fdb, string configFile)
@@ -683,6 +719,7 @@ namespace Mono.Addins.Description
 			writer.WriteValue ("ConditionTypes", ConditionTypes);
 			writer.WriteValue ("FilesInfo", fileInfo);
 			writer.WriteValue ("Localizer", localizer);
+			writer.WriteValue ("flags", (int)flags);
 		}
 		
 		void IBinaryXmlElement.Read (BinaryXmlReader reader)
@@ -710,6 +747,7 @@ namespace Mono.Addins.Description
 			conditionTypes = (ConditionTypeDescriptionCollection) reader.ReadValue ("ConditionTypes", new ConditionTypeDescriptionCollection (this));
 			fileInfo = (object[]) reader.ReadValue ("FilesInfo", null);
 			localizer = (ExtensionNodeDescription) reader.ReadValue ("Localizer");
+			flags = (AddinFlags) reader.ReadInt32Value ("flags");
 			
 			if (mainModule != null)
 				mainModule.SetParent (this);
@@ -750,6 +788,5 @@ namespace Mono.Addins.Description
 			writer.WriteValue ("fileName", fileName);
 			writer.WriteValue ("timestamp", timestamp);
 		}
-
 	}
 }
