@@ -93,6 +93,7 @@
     <File name="Mono.Addins.Localization/IPluralAddinLocalizer.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Addins.Database/IAssemblyReflector.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Addins.Database/DefaultAssemblyReflector.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.Addins.Description/AddinFlags.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
